Add Docker support and update dependencies
- Introduced Docker support with CPU-only and GPU-enabled configurations via Dockerfiles and docker-compose files.
- Added a .dockerignore file to exclude unnecessary files from Docker images.
- Updated bun.lock and package.json to include new dependencies for icon handling.
- Enhanced README with Docker usage instructions and deployment options.
- Refactored components to utilize new icon libraries for improved UI consistency.

--- a/docs/overview/installation.mdx
+++ b/docs/overview/installation.mdx
@@ -7,12 +7,15 @@ description: "Download and install Voicebox on macOS, Windows, or Linux"
 
 Voicebox is available for macOS and Windows, with Linux builds coming soon.
 
-<CardGroup cols={2}>
+<CardGroup cols={3}>
   <Card title="macOS" icon="apple">
     Download for Apple Silicon or Intel Macs
   </Card>
   <Card title="Windows" icon="windows">
     Download MSI installer or Setup executable
+  </Card>
+  <Card title="Docker" icon="docker" href="/overview/docker">
+    Run with web UI in a container
   </Card>
 </CardGroup>
 
@@ -61,7 +64,7 @@ Voicebox is available for macOS and Windows, with Linux builds coming soon.
 ### Linux
 
 <Note>
-  Linux builds are coming soon. Currently blocked by GitHub runner disk space limitations.
+  Linux desktop builds are coming soon. For server deployments, use [Docker](/overview/docker).
 </Note>
 
 ## First Launch
